<resources>

    <string name="app_name">uText</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">uText</string>
    <string name="et_search_hint">Type Text to Search</string>
    <string name="et_email">Email</string>
    <string name="et_password">Password</string>
    <string name="b_log_in">Log In</string>
    <string name="b_sign_up">Sign Up</string>
    <string name="tv_forget_your_password">Forget your password?</string>
    <string name="iv_cd_list_note">List Note</string>
    <string name="iv_cd_reminder">Reminder</string>
    <string name="iv_cd_gallery">Gallery</string>
    <string name="iv_cd_audio">Audio</string>
    <string name="iv_cd_location">Location</string>
    <string name="iv_cd_star">Important</string>
    <string name="iv_cd_logo">uText</string>
    <string name="ib_cd_mic">Speak</string>
    <string name="et_listnote_title_hint">Title of the List Note</string>
    <string name="ib_listnote_delete">Delete</string>
    <string name="ib_cd_add_item">Add List Item</string>
    <string name="b_from_gallery_text">Gallery</string>
    <string name="b_from_camera_text">Image</string>
    <string name="b_from_cam_recorder_text">Video</string>
    <string name="iv_cd_image">Image</string>
    <string name="ib_cd_delete">Delete</string>
    <string name="ib_cd_play_stop">Play Stop</string>
    <string name="audio_media_type">1</string>
    <string name="image_media_type">2</string>
    <string name="video_media_type">3</string>
    <string name="location_media_type">4</string>
    <string name="default_id">0</string>
    <string name="title_activity_view_list_note">ViewListNoteActivity</string>
    <string name="title_activity_edit_multi_media_note">EditMultiMediaNoteActivity</string>
    <string name="title_activity_edit_list_note">EditListNoteActivity</string>
    <string name="title_activity_user_verification">UserVerificationActivity</string>
    <string name="title_activity_edit_reminder">EditReminderActivity</string>
    <string name="title_activity_export_database">ExportDatabaseActivity</string>
    <string name="b_map_search">Search</string>
    <string name="b_map_done">Add Map</string>
    <string name="et_map_hint">Dhaka, Bangladesh</string>
    <string name="b_register">Register</string>
    <string name="et_fullname">Full Name</string>
    <string name="b_export_as_xml">Export As XML</string>
    <string name="b_export_as_csv">Export As CSV</string>
    <string name="b_export_as_txt">Export As TXT</string>
    <string name="b_upload">Back Up</string>
    <string name="b_download">Restore</string>

</resources>