<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/iv_cd_logo"
            android:src="@drawable/utext_logo_color" />

        <EditText
            android:id="@+id/etFullName"
            style="@style/.EditText"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:hint="@string/et_fullname"
            android:inputType="none" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/.EditText"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/.EditText"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:hint="@string/et_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/bRegister"
            style="@style/.Button"
            android:background="@drawable/log_in_button"
            android:text="@string/b_register"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#8A0808" />
    </LinearLayout>

</ScrollView>