<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#dedede"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_cd_image" />

        <ImageButton
            android:id="@+id/ibDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:background="@null"
            android:contentDescription="@string/ib_cd_delete"
            android:padding="3dp"
            android:src="@drawable/ic_menu_delete" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvMediaType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_media_type"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_id"
        android:visibility="invisible" />

</LinearLayout>