<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:background="#cdcdcd"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@+id/ibPlayStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@null"
        android:contentDescription="@string/ib_cd_play_stop"
        android:src="@drawable/ic_menu_play" />

    <SeekBar
        android:id="@+id/sbProgressBar"
        style="@style/.SeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/ibDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:background="@null"
        android:contentDescription="@string/ib_cd_delete"
        android:padding="3dp"
        android:src="@drawable/ic_menu_delete" />

    <TextView
        android:id="@+id/tvMediaType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_media_type"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_id"
        android:visibility="invisible" />

</LinearLayout>