<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/map_edit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/et_map_hint"
            android:lines="2" />

        <Button
            android:id="@+id/map_add_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0"
            android:text="@string/b_map_search" />
    </LinearLayout>

    <Button
        android:id="@+id/back_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_map_done" />

    <com.google.android.maps.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="0OfRe3PDeraid9fcymalNAFv0m-OixOKXqM-fzg" />

</LinearLayout>