<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:background="#cdcdcd" >

    <ImageButton
        android:id="@+id/ibPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#dedede"
        android:contentDescription="@string/ib_cd_delete"
        android:src="@drawable/ic_menu_play" />

    <ImageButton
        android:id="@+id/ibDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#dedede"
        android:contentDescription="@string/ib_cd_delete"
        android:src="@drawable/ic_menu_close" />

    <TextView
        android:id="@+id/tvMediaType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_media_type"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_id"
        android:visibility="invisible" />

</LinearLayout>