<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#cdcdcd"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp" >

    <Button
        android:id="@+id/bFromGallery"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="#dedede"
        android:drawableTop="@drawable/ic_menu_folder"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/b_from_gallery_text"
        android:textColor="#444444" />

    <Button
        android:id="@+id/bFromCamera"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="#dedede"
        android:drawableTop="@drawable/ic_menu_camera"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/b_from_camera_text"
        android:textColor="#444444" />

    <Button
        android:id="@+id/bFromCamRecorder"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:background="#dedede"
        android:drawableTop="@drawable/ic_menu_video"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/b_from_cam_recorder_text"
        android:textColor="#444444" />

</LinearLayout>