<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_selector"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <TextView
            android:id="@+id/tvText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textColor="#040404"
            android:textSize="18dip" />

        <TextView
            android:id="@+id/tvId"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#343434"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" >

            <ImageView
                android:id="@+id/ivList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_cd_list_note"
                android:padding="2dp"
                android:src="@drawable/ic_listview_list"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_cd_reminder"
                android:padding="2dp"
                android:src="@drawable/ic_listview_reminder"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_cd_gallery"
                android:padding="2dp"
                android:src="@drawable/ic_listview_camera"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_cd_audio"
                android:padding="2dp"
                android:src="@drawable/ic_listview_mic"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_cd_audio"
                android:padding="2dp"
                android:src="@drawable/ic_listview_video"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/iv_cd_location"
                android:padding="2dp"
                android:src="@drawable/ic_listview_location"
                android:visibility="invisible" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>